<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:background="#b9111111"
              android:layout_height="match_parent">


    <TextView
        android:background="#2effffff"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/beforego"
        android:textColor="#898989"
        android:id="@+id/textView"/>

    <LinearLayout
        android:id="@+id/ask"
        android:padding="2dp"
        android:clickable="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp">
        <ImageView
           android:background="@drawable/selector_ywbd"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <TextView
            android:textColor="#898989"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="7dp"
            android:text="@string/askresponse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/thing"
        android:padding="2dp"
        android:clickable="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp">
        <ImageView
            android:layout_gravity="center"
            android:background="@drawable/selector_bbwp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <TextView
            android:textColor="#898989"
            android:layout_marginLeft="2dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/thing"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </LinearLayout>
</LinearLayout>
