<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="#D4D4D4"
        tools:context=".MainActivity"
        android:weightSum="1">
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:background="#ffffff"
                android:gravity="center"
                android:layout_height="40dp">
                <ImageView
                        android:id="@+id/tp"
                        android:layout_width="wrap_content"
                        android:background="@drawable/selector_tp"
                        android:clickable="true"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="25dp"
                        android:text="@string/gogogo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

        </LinearLayout>
        <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_marginTop="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#D4D4D4"
                app:layout_heightPercent="25%h"
                app:layout_widthPercent="100%w"
                android:orientation="horizontal"
                >

                <com.zhy.android.percent.support.PercentRelativeLayout
                        android:id="@+id/scenery"
                        android:layout_margin="1dp"
                        app:layout_heightPercent="100%h"
                        app:layout_widthPercent="70%w"
                        android:layout_width="match_parent"
                        android:background="#ffffff"
                        android:onClick="click"
                        android:layout_height="match_parent">
                        <ImageView
                                android:id="@+id/iv_scenery"
                                android:layout_gravity="center"
                                android:layout_width="match_parent"
                                android:gravity="center"
                                android:src="@mipmap/jd"
                                android:scaleType="center"
                                android:layout_height="match_parent"/>
                        <TextView
                                android:layout_alignParentBottom="true"
                                android:id="@+id/tv_scenery"
                                android:layout_weight="1"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/scenery"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"/>
                </com.zhy.android.percent.support.PercentRelativeLayout>
                <com.zhy.android.percent.support.PercentLinearLayout
                        android:layout_margin="1dp"
                        app:layout_heightPercent="100%h"
                        app:layout_widthPercent="30%w"
                        android:layout_width="wrap_content"
                        android:background="#ffffff"
                        android:orientation="vertical"
                        android:id="@+id/beforego"
                        android:onClick="click"
                        android:layout_height="wrap_content">
                        <TextView
                                android:layout_width="match_parent"
                                android:text="@string/beforego"
                                android:layout_weight="1"
                                app:layout_heightPercent="20%h"
                                app:layout_widthPercent="30%w"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:layout_height="wrap_content">
                        </TextView>
                </com.zhy.android.percent.support.PercentLinearLayout>
        </com.zhy.android.percent.support.PercentLinearLayout>
        <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_heightPercent="50%h"

                android:background="#D4D4D4"
                app:layout_widthPercent="100%w"
                android:orientation="horizontal"
                >

                <com.zhy.android.percent.support.PercentLinearLayout
                        android:id="@+id/road"
                        android:layout_margin="1dp"
                        app:layout_heightPercent="100%h"
                        app:layout_widthPercent="40%w"
                        android:layout_width="wrap_content"
                        android:background="#ffffff"
                        android:onClick="click"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <ImageView
                                android:layout_weight="1"
                                android:id="@+id/iv_road"
                                app:layout_heightPercent="30%h"
                                app:layout_widthPercent="30%w"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:src="@mipmap/xl"
                                android:gravity="center"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:layout_weight="1"
                                android:layout_gravity="center"
                                android:id="@+id/tv_road"
                                android:gravity="center"
                                app:layout_heightPercent="20%h"
                                app:layout_widthPercent="30%w"
                                android:text="@string/road"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                </com.zhy.android.percent.support.PercentLinearLayout>
                <com.zhy.android.percent.support.PercentLinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_heightPercent="100%h"
                        app:layout_widthPercent="30%w"
                        android:background="#D4D4D4"
                        android:orientation="vertical"
                        >

                        <com.zhy.android.percent.support.PercentLinearLayout
                                android:layout_margin="1dp"
                                app:layout_heightPercent="50%h"
                                app:layout_widthPercent="100%w"
                                android:layout_width="wrap_content"
                                android:id="@+id/shop"
                                android:onClick="click"
                                android:background="#ffffff"
                                android:orientation="vertical"
                                android:layout_height="wrap_content">

                                <ImageView
                                        android:id="@+id/iv_shop"
                                        android:layout_gravity="center"
                                        android:layout_width="wrap_content"
                                        app:layout_heightPercent="30%h"
                                        app:layout_widthPercent="30%w"
                                        android:src="@mipmap/gw"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:layout_height="wrap_content"/>
                                <TextView
                                        android:layout_weight="1"
                                        android:id="@+id/tv_shop"
                                        android:layout_gravity="center"
                                        android:gravity="center"
                                        app:layout_heightPercent="30%h"
                                        app:layout_widthPercent="30%w"
                                        android:text="@string/shop"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"/>
                        </com.zhy.android.percent.support.PercentLinearLayout>
                        <com.zhy.android.percent.support.PercentLinearLayout
                                android:layout_margin="1dp"
                                android:id="@+id/stay"
                                app:layout_heightPercent="50%h"
                                app:layout_widthPercent="100%w"
                                android:orientation="vertical"
                                android:onClick="click"
                                android:background="#ffffff"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <ImageView
                                        android:id="@+id/iv_stay"
                                        android:layout_gravity="center"
                                        android:layout_width="wrap_content"
                                        android:src="@mipmap/zs"
                                        android:layout_weight="1"
                                        app:layout_heightPercent="30%h"
                                        app:layout_widthPercent="30%w"
                                        android:gravity="center"
                                        android:layout_height="wrap_content"/>
                                <TextView
                                        android:id="@+id/tv_stay"
                                        android:layout_weight="1"
                                        android:layout_gravity="center"
                                        android:gravity="center"
                                        android:text="@string/stay"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"/>
                        </com.zhy.android.percent.support.PercentLinearLayout>
                </com.zhy.android.percent.support.PercentLinearLayout>
                <com.zhy.android.percent.support.PercentLinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_heightPercent="100%h"

                        android:background="#D4D4D4"
                        app:layout_widthPercent="30%w"
                        android:orientation="vertical"
                        >

                        <com.zhy.android.percent.support.PercentLinearLayout
                                app:layout_heightPercent="50%h"
                                android:background="#ffffff"
                                android:id="@+id/food"
                                android:onClick="click"
                                app:layout_widthPercent="100%w"
                                android:layout_width="wrap_content"
                                android:layout_margin="1dp"
                                android:orientation="vertical"
                                android:layout_height="wrap_content">

                                <ImageView
                                        android:id="@+id/iv_food"
                                        android:layout_weight="1"
                                        android:layout_gravity="center"
                                        android:gravity="center"
                                        android:layout_width="wrap_content"
                                        app:layout_heightPercent="30%h"
                                        app:layout_widthPercent="30%w"
                                        android:src="@mipmap/ms"
                                        android:layout_height="wrap_content"/>
                                <TextView
                                        android:id="@+id/tv_food"
                                        android:layout_weight="1"
                                        android:layout_gravity="center"
                                        android:gravity="center"
                                        android:text="@string/food"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"/>
                        </com.zhy.android.percent.support.PercentLinearLayout>
                        <com.zhy.android.percent.support.PercentLinearLayout
                                app:layout_heightPercent="50%h"
                                android:onClick="click"
                                app:layout_widthPercent="100%w"
                                android:background="#ffffff"
                                android:id="@+id/traffic"
                                android:layout_margin="1dp"
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <ImageView
                                        android:id="@+id/iv_traffic"
                                        android:layout_weight="1"
                                        android:layout_width="wrap_content"
                                        android:src="@mipmap/jt"
                                        app:layout_heightPercent="30%h"
                                        app:layout_widthPercent="30%w"
                                        android:layout_gravity="center"
                                        android:gravity="center"
                                        android:layout_height="wrap_content"/>
                                <TextView
                                        android:id="@+id/tv_traffic"
                                        android:layout_weight="1"
                                        android:layout_gravity="center"
                                        android:gravity="center"
                                        android:text="@string/traffic"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"/>
                        </com.zhy.android.percent.support.PercentLinearLayout>
                </com.zhy.android.percent.support.PercentLinearLayout>

        </com.zhy.android.percent.support.PercentLinearLayout>

        <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#D4D4D4"
                app:layout_heightPercent="25%h"
                app:layout_widthPercent="100%w"
                android:orientation="horizontal"
                >

                <com.zhy.android.percent.support.PercentLinearLayout
                        app:layout_heightPercent="100%h"
                        app:layout_widthPercent="70%w"
                        android:layout_width="wrap_content"
                        android:id="@+id/travel"
                        android:background="#ffffff"
                        android:orientation="vertical"
                        android:onClick="click"
                        android:layout_margin="1dp"
                        android:layout_height="wrap_content">
                        <ImageView
                                android:id="@+id/iv_travel"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:src="@mipmap/yj"
                                app:layout_heightPercent="30%h"
                                app:layout_widthPercent="13%w"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:id="@+id/tv_travel"
                                android:layout_weight="1"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/travel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                </com.zhy.android.percent.support.PercentLinearLayout>
                <com.zhy.android.percent.support.PercentLinearLayout
                        app:layout_heightPercent="100%h"
                        app:layout_widthPercent="30%w"
                        android:layout_margin="1dp"
                        android:layout_width="wrap_content"
                        android:background="#ffffff"
                        android:id="@+id/message"
                        android:onClick="click"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">
                        <TextView
                                android:layout_weight="1"
                                android:layout_width="wrap_content"
                                android:text="@string/message"
                                android:layout_gravity="center"
                                android:gravity="center"
                                app:layout_heightPercent="20%h"
                                app:layout_widthPercent="30%w"
                                android:layout_height="wrap_content">
                        </TextView>
                </com.zhy.android.percent.support.PercentLinearLayout>

        </com.zhy.android.percent.support.PercentLinearLayout>

</com.zhy.android.percent.support.PercentLinearLayout>
